--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,25 @@
 {
-  "name": "app",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.5.8",
-    "jquery": "^3.1.0",
-    "angular-ui-router": "0.3.1"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.4.0"
-  },
-  "appPath": "app",
-  "moduleName": "App"
+	"name": "app",
+	"version": "0.0.0",
+	"dependencies": {
+		"angular": "^1.5.8",
+		"jquery": "^3.1.0",
+		"angular-ui-router": "0.3.1",
+		"summernote": "^0.8.2"
+	},
+	"devDependencies": {
+		"angular-mocks": "^1.4.0"
+	},
+	"appPath": "app",
+	"moduleName": "App",
+	"overrides": {
+		"bootstrap": {
+			"main": [
+				"less/bootstrap.less",
+				"dist/css/bootstrap.css",
+				"dist/js/bootstrap.js"
+			]
+		}
+	}
 }
+
