--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
     "angular": "^1.5.8",
     "jquery": "^3.1.0",
     "angular-ui-router": "0.3.1",
-    "summernote": "^0.8.2",
-    "angular-sanitize": "^1.5.8"
+    "summernote": "^0.8.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
